--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_name=True Darkness
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=LGPL-3.0
 # The mod version. See https://semver.org/
-mod_version=1.2
+mod_version=1.2.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -42,6 +42,6 @@ mod_group_id=grondag.darkness
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Grondag, Qsmium
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Updated Version of True Darkness Mod by Grondag supporting Biome Dependant Darkness. Updated by Qsmium.
+mod_description=Updated Version of True Darkness Mod by Grondag supporting Biome Dependant Darkness. Updated by Qsmium. Contributors: mdaole
 # Pack version - this changes each minecraft release, in general.
 pack_format_number=34
